# awachat

./: README.md
awachat_backend/: Cargo.toml  data.db
awachat_backend/src/: main.rs
awachat_frontend/: README.md  package.json  pnpm-lock.yaml
awachat_frontend/src/: App.vue  main.ts
awachat_frontend/src/assets/: main.css
awachat_frontend/src/components/: ChatInputArea.vue  ChatShowArea.vue
awachat_frontend/src/services/: socketService.ts
