[package]
name = "awachat_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
