[package]
name = "awachat_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
deadpool-sqlite = "0.10.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
